# ir_zynq_detector

./: .gitignore  README.md
configs/: deploy_contract_ssdlite_ir_v1.json  project_config.yaml
docs/: ac880_boot_pl_preload.md  board_bringup_uart.md  board_dw3x3_selftest_flow.md  current_verified_snapshot.md  demo_uart_pl_dw3x3.md  deployment_contract.md  github_learning_guide.md  inpath_dw_regression.md  inpath_dw_stage_report.md  model_eval_and_export.md  pl_depthwise_accel_plan.md  pl_depthwise_accel_status.md  pl_dw3x3_full_scheduler_demo.md  pl_dw3x3_performance_analysis.md  pl_ps_mmio_contract.md  stage_plan.md  true_inference_runtime_plan.md  uart_image_protocol.md  visual_demo.md
hw/vivado/: build_bitstream.tcl  create_project.tcl  synth_utilization.tcl
pc/: requirements-training.txt  requirements.txt
pc/models/: __init__.py  flir_ir_dataset.py  ssdlite_mobilenetv2_ir.py
pc/ncnn_smoke/: irdet_ncnn_smoke.cpp
pc/scripts/: build_ncnn_arm_linux_min.ps1  build_zynq_linux_arm_ncnn.ps1  check_deploy_contract.py  convert_runtime_onnx_to_ncnn.ps1  deploy_ac880_linux_demo.py  deploy_ac880_real_layer_update_over_serial.ps1  eval_ssdlite_ir.py  export_deploy_bundle.py  export_depthwise_full_channel.py  export_depthwise_layer_case.py  export_depthwise_window_batch.py  export_depthwise_window_case.py  export_linux_ncnn_demo_assets.py  export_ncnn_smoke_vectors.py  export_ssd_raw_sample.py  export_ssdlite_ir_onnx.py  export_ssdlite_ir_runtime_onnx.py  infer_ac880_linux_image.py  inspect_onnx_model.py  install_ac880_ir_boot_persistent.py  install_torch_cuda.ps1  invoke_ac880_serial_command.ps1  list_ncnn_depthwise_blobs.py  make_ac880_ir_boot_dtb.py  pack_onnx_external_data.py  package_ac880_uboot_pl_preload.ps1  package_ac880_uboot_pl_preload.py  package_zynq_linux_demo.ps1  patch_linux_elf_interpreter.py  prepare_ac880_ssh_link_over_serial.ps1  prepare_flir_subset.py  program_ac880_pl_only.ps1  run_ac880_inpath_regression.ps1  run_ac880_linux_demo.ps1  run_ac880_linux_image_infer.ps1  run_ac880_linux_serial_demo.ps1  (+15 more)
vitis/: create_baremetal_app.tcl  create_baremetal_raw_sample_app.tcl  create_dw3x3_selftest_app.tcl  probe_jtag_targets.tcl  program_pl_bitstream_only.tcl  run_dw3x3_selftest_on_board.tcl  run_uart_rx_on_board.tcl  run_uart_rx_raw_sample_on_board.tcl
zynq_linux/: CMakeLists.txt  README.md
zynq_linux/cmake/toolchains/: vitis_aarch32_linux.cmake
zynq_linux/include/: irdet_linux_dw3x3_case.h  irdet_linux_ncnn_detector.h  irdet_linux_pl_dw3x3_probe.h
zynq_linux/src/: irdet_linux_dw3x3_case.cpp  irdet_linux_main.cpp  irdet_linux_ncnn_detector.cpp  irdet_linux_pl_dw3x3_probe.cpp  irdet_linux_pl_dw3x3_probe_stub.cpp  irdet_linux_pl_dw3x3_tool.cpp
(+48 files in other folders)
